--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family: Verdana, sans-serif;
-    src: url(/static_templates/Verdana-font.ttf) format('truetype');
+    src: url(../fonts/Verdana-font.ttf) format('truetype');
     font-style: normal;
 }
 
