Registro das rotas e correção do formulário para gerar o certificado.

--- a/templates/certificate.html
+++ b/templates/certificate.html
@@ -28,7 +28,7 @@
                 <td>Período Letivo:</td>
                 <td> <strong>2019.2</strong> </td>
                 <td>Nível:</td>
-                <td> <strong>GRADUACAO</strong> </td>
+                <td> <strong>{{ nivel }}</strong> </td>
             </tr>
             <tr>
                 <td>Matrícula:</td>
@@ -38,13 +38,13 @@
             </tr>
             <tr>
                 <td>Nome:</td>
-                <td> <strong>JOAO SILVA SOUSA</strong> </td>
+                <td> <strong>{{ nome }}</strong> </td>
                 <td></td>
                 <td></td>
             </tr>
             <tr>
                 <td>Curso:</td>
-                <td> <strong>CIÊNCIA E TECNOLOGIA/DCCET/CCET - SÃO LUÍS - M</strong> </td>
+                <td> <strong>{{ curso }} - SÃO LUÍS - M</strong> </td>
                 <td>Cidade:</td>
                 <td> <strong>SAO LUIS</strong> </td>
             </tr>
