--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,89 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="container">
 
-        <h2 class="title"> {{ var }} </h2>
-
+<section class="hero is-danger is-small">
+    <div class="hero-body">
+        <div class="container">
+            <h1 class="title" style="text-align: center">Fake Academic Certificate Creator</h1>
+        </div>
     </div>
+</section>
+
+<div class="container is-content" style="margin-top: 20px">
+
+    <div class="columns">
+
+        <div class="column is-half">
+
+            <form action="" method="post">
+                <div class="field">
+                    <label class="label" for="nome">Nome Completo:</label>
+                    <div class="control">
+                        <input id="nome" name="nome" class="input" type="text" placeholder="e.g Alex Smith">
+                    </div>
+                </div>
+
+                <div class="field">
+                    <label class="label" for="curso">Curso:</label>
+                    <div class="control">
+                        <input type="text" id="curso" name="curso" class="input"
+                            placeholder="Você quer cursar qual graduação?">
+                    </div>
+                </div>
+                <div class="field">
+                    <label class="label" for="nivel">Nível:</label>
+                    <div class="select">
+                        <select name="nivel" id="nivel">
+                          <option value="graduação" selected>Graduação</option>
+                          <option value="mestrado">Mestrado</option>
+                          <option value="doutorado">Doutorado</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="field">
+                    <label for="nivel" class="label">Cidade:</label>
+                    <div class="control">
+                        <input type="text" name="cidade" id="cidade" class="input">
+                    </div>
+                </div>
+                <div class="field">
+                    <label class="label" for="turno">Turno:</label>
+                    <div class="select">
+                        <select name="turno" id="turno">
+                          <option value="M" selected>Matutino</option>
+                          <option value="N">Noturno</option>
+                          <option value="I">Integral</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="field">
+                    <label for="disciplinas" class="label">Disciplinas:</label>
+                    <div class="select">
+                        <select name="disciplinas" id="disciplinas">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                        </select>
+                    </div>
+                </div>
+                <hr>
+                <div class="control">
+                    <input type="submit" id="gerar_certificado" name="gerar" class="button is-danger">
+                </div>
+            </form>
+
+        </div>
+        <div class="column is-half">
+            <img class='is-image' src="{{ url_for('static', filename='images/images.jpeg') }}" alt="" srcset="">
+        </div>
+    </div>
+
+
+
+</div>
+
 {% endblock content %}
