--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 
     <!-- Folhas de Estilo -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css', _external=True) }}">
 </head>
 
 <body>
